v2.41
- added non-numeric tag functionality (thanks Mark Matienzo)

v2.40 
- renamed Record.as_marc21 Field.as_marc21 to Record.as_marc and Field.as_marc ;
  to bring in line with Record.decode_marc -- but I created aliases for the old
  methods so people's code won't break.
- Record.decode_marc now decodes utf-8 after fields have been extracted with 
  byte offsets. Similarly Record.as_marc encodes fields as utf-8 before 
  calculating byte offsets. This hopefully will help people like Ted who
  were trying to create records with Unicode in them, serializing them as
  marc, and then other software complaining about record length, byte offsets
  being incorrect. https://lists.launchpad.net/pymarc-team/msg00007.html
- disabled quiet marc8 error test since whatever marc8 error was coming up
  now has disappeared with the new utf-8 encode/decode action.

v2.32 Sun Apr 19 21:20:31 EDT 2009
- added Field.delete_subfield thanks Ahuel Angelinetti 

v2.31 Sun Mar  1 09:11:11 EST 2009
- added strict namespace checking, thanks Godmar Back

v2.30 Tue Oct 21 08:27:58 EDT 2008
- added logic to Field to format integer tags if they aren't of length 3
  thanks to Ross Singer for noticing the problem

v2.23 Tue Jul  8 12:20:27 EDT 2008
- added *.py to MANIFEST.in, or else ez_setup.py ain't there

v2.22 Tue Jul  8 12:16:28 EDT 2008
- modified MANIFEST.in to package up test/batch.xml (thanks Dave Woodward)

v2.21 Thu Apr 17 06:36:42 EDT 2008
- added more iii specific marc8 abominations (thanks Galen Charlton)

v2.2 Tue Mar 25 13:00:50 EDT 2008
- MARCReader now accepts any "file-like" object that has read() 
  thanks Neil Santos.

v2.1 Wed Mar 19 15:31:11 EST 2008
- new Record handy lookup methods, and tests (thanks Chris Catalfo)
- only make elementtreee a requirement if it's not already available

v2.0 Wed Feb 27 15:46:32 EST 2008
- WARNING: v2.0 will break your code!
- PEP-8 cleanup (thanks Gabe Farrell)
- moved over to bzr (http://fruct.us/bzr/pymarc)