@@ -6,9 +6,20 @@ from pymarc import marc8_to_unicode, Field, Record, MARCReader, MARCWriter
 class MARC8Test(TestCase):
     
     def test_marc8_reader(self):
-        marc8_file = file('test/marc8.dat')
-        reader = MARCReader(marc8_file)
-        self.assertEquals(type(reader.next()), Record)
+        reader = MARCReader(file('test/marc8.dat'))
+        r =  reader.next()
+        self.assertEquals(type(r), Record)
+        utitle = r['240']['a']
+        self.assertEquals(type(utitle), str)
+        self.assertEquals(utitle, 'De la solitude \xe1a la communaut\xe2e.')
+
+    def test_marc8_reader_to_unicode(self):
+        reader = MARCReader(file('test/marc8.dat'), to_unicode=True)
+        r =  reader.next()
+        self.assertEquals(type(r), Record)
+        utitle = r['240']['a']
+        self.assertEquals(type(utitle), unicode)
+        self.assertEquals(utitle, u'De la solitude \xe0 la communaut\xe9.')
 
     def test_marc8_to_unicode(self):
         marc8_file = file('test/test_marc8.txt')
@@ -25,16 +36,59 @@ class MARC8Test(TestCase):
 
         self.assertEquals(count, 1515)
 
-    def test_unicode(self):
+    def test_writing_unicode(self):
         record = Record()
         record.add_field(Field(245, ['1', '0'], ['a', unichr(0x1234)]))
+        record.leader = '         a              '
         writer = MARCWriter(open('test/foo', 'w'))
         writer.write(record)
         writer.close()
 
-        reader = MARCReader(open('test/foo'))
+        reader = MARCReader(open('test/foo'), to_unicode=True)
         record = reader.next()
         self.assertEqual(record['245']['a'], unichr(0x1234))
+
+    def test_reading_utf8_with_flag(self):
+        reader = MARCReader(open('test/utf8_with_leader_flag.dat'))
+        record = reader.next()
+        self.assertEquals(type(record), Record)
+        utitle = record['240']['a']
+        self.assertEquals(type(utitle), str)
+        self.assertEquals(utitle, 'De la solitude a\xcc\x80 la communaute\xcc\x81.')
+
+        reader = MARCReader(open('test/utf8_with_leader_flag.dat'), 
+                            to_unicode=True)
+        record = reader.next()
+        self.assertEquals(type(record), Record)
+        utitle = record['240']['a']
+        self.assertEquals(type(utitle), unicode)
+        self.assertEquals(utitle, u'De la solitude a' + unichr(0x0300) + ' la communaute' + unichr(0x0301) + '.')
+
+    def test_reading_utf8_without_flag(self):
+        reader = MARCReader(open('test/utf8_without_leader_flag.dat'))
+        record = reader.next()
+        self.assertEquals(type(record), Record)
+        utitle = record['240']['a']
+        self.assertEquals(type(utitle), str)
+        self.assertEquals(utitle, 'De la solitude a\xcc\x80 la communaute\xcc\x81.')
+
+        reader = MARCReader(open('test/utf8_without_leader_flag.dat'), 
+                            to_unicode=True)
+        record = reader.next()
+        self.assertEquals(type(record), Record)
+        utitle = record['240']['a']
+        self.assertEquals(type(utitle), unicode)
+        # unless you force utf-8 characters will get lost and
+        # warnings will appear in the terminal
+        self.assertEquals(utitle, 'De la solitude a   la communaute .')
+
+        reader = MARCReader(open('test/utf8_without_leader_flag.dat'), 
+                            to_unicode=True, from_charset='utf-8')
+        record = reader.next()
+        self.assertEquals(type(record), Record)
+        utitle = record['240']['a']
+        self.assertEquals(type(utitle), unicode)
+        self.assertEquals(utitle, u'De la solitude a' + unichr(0x0300) + ' la communaute' + unichr(0x0301) + '.')
 
 def suite():
     test_suite = makeSuite(MARC8Test, 'test')
