@@ -1,3 +1,8 @@
+vx.xx
+- changed default character set handling behavior back to what it was like 
+  pre-v2.40. But retained the ability to convert to Unicode when reading
+  by using MARCReader(to_unicode=True).
+
 v2.41
 - added non-numeric tag functionality (thanks Mark Matienzo)
 
